tests/transpiler/x/swift/exists_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/014/main.swift:3:12: error: cannot find 'exists' in scope
 1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:09 GMT+7
 2 | let data = [1, 2]
 3 | let flag = exists(({ var _res: [[String: Any]] = []
   |            `- error: cannot find 'exists' in scope
 4 | for x in data {
 5 |     if (x == 1) {

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/014/main.swift:6:21: error: cannot convert value of type 'Int' to expected argument type '[String : Any]'
 4 | for x in data {
 5 |     if (x == 1) {
 6 |         _res.append(x)
   |                     `- error: cannot convert value of type 'Int' to expected argument type '[String : Any]'
 7 |     }
 8 | }
