tests/transpiler/x/swift/exists_builtin.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:09 GMT+7
let data = [1, 2]
let flag = exists(({ var _res: [[String: Any]] = []
for x in data {
    if (x == 1) {
        _res.append(x)
    }
}
return _res })())
print(flag)
